--- a/src/main/resources/trashsoftware/trashSnooker/fxml/cueSelectionView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/cueSelectionView.fxml
@@ -3,15 +3,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import trashsoftware.trashSnooker.fxml.widgets.CueList?>
 <?import javafx.geometry.Insets?>
+<?import trashsoftware.trashSnooker.fxml.widgets.FixedCueList?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.CueSelectionView"
       prefWidth="720.0" prefHeight="400.0">
-    
+
     <padding>
         <Insets topRightBottomLeft="5.0"/>
     </padding>
 
-    <CueList fx:id="cueList"/>
+    <FixedCueList fx:id="cueList"/>
 
 </VBox>
