--- a/src/main/resources/trashsoftware/trashSnooker/fxml/inventoryPages/storePage.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/inventoryPages/storePage.fxml
@@ -9,10 +9,15 @@
 <?import trashsoftware.trashSnooker.fxml.widgets.CueList?>
 <?import javafx.scene.text.Font?>
 <?import trashsoftware.trashSnooker.fxml.widgets.FixedCueList?>
+<?import javafx.geometry.Insets?>
 <fx:root xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          type="trashsoftware.trashSnooker.fxml.inventoryPages.StorePage"
          prefHeight="400.0" prefWidth="600.0" spacing="10.0">
+
+    <padding>
+        <Insets top="10.0"/>
+    </padding>
 
     <Label text="%inventoryCues">
         <font>
