--- a/src/main/resources/trashsoftware/trashSnooker/fxml/widgets/fixedModelList.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/widgets/fixedModelList.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import trashsoftware.trashSnooker.fxml.widgets.FixedCueList?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<fx:root type="trashsoftware.trashSnooker.fxml.widgets.FixedCueList"
+<?import trashsoftware.trashSnooker.fxml.widgets.FixedModelList?>
+<fx:root type="trashsoftware.trashSnooker.fxml.widgets.FixedModelList"
          xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml" prefHeight="400.0">
-    <GridPane fx:id="container" FixedCueList.hgrow="ALWAYS" vgap="5.0">
+    <GridPane fx:id="container" vgap="5.0" hgap="10.0" FixedModelList.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints />
             <ColumnConstraints halignment="RIGHT"/>
