--- a/src/main/resources/trashsoftware/trashSnooker/fxml/achievementsView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/achievementsView.fxml
@@ -25,9 +25,10 @@
         <TableView fx:id="achCatTable"/>
         <TableView fx:id="achTable" HBox.hgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="textCol" prefWidth="500.0"/>
+                <TableColumn fx:id="textCol" prefWidth="400.0"/>
                 <TableColumn fx:id="dateCol" prefWidth="200.0"/>
-                <TableColumn fx:id="iconCol" prefWidth="100.0"/>
+                <TableColumn fx:id="iconCol" prefWidth="50.0"/>
+                <TableColumn fx:id="awdCol" prefWidth="100.0"/>
             </columns>
         </TableView>
     </HBox>
