--- a/src/main/resources/trashsoftware/trashSnooker/fxml/inventoryPages/inventoryPage.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/inventoryPages/inventoryPage.fxml
@@ -30,6 +30,6 @@
         </HBox>
     </HBox>
     
-    <FixedCueList fx:id="cueList"/>
+    <FixedCueList fx:id="cueList" VBox.vgrow="ALWAYS"/>
 
 </fx:root>
