--- a/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
@@ -158,7 +158,7 @@
 
                     <HBox alignment="CENTER_LEFT" spacing="20.0">
                         <Label fx:id="player1Label" text="Player 1"/>
-                        <Label fx:id="player1ScoreLabel" text="0"/>
+                        <Label fx:id="player1ScoreLabel"/>
                         <Canvas fx:id="player1TarCanvas"/>
                     </HBox>
                     <HBox GridPane.columnIndex="1" alignment="CENTER" spacing="5.0">
@@ -168,12 +168,12 @@
                     </HBox>
                     <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="1"
                           GridPane.rowIndex="1">
-                        <Label fx:id="singlePoleLabel" text="0"/>
+                        <Label fx:id="singlePoleLabel" />
                         <Canvas fx:id="singlePoleCanvas"/>
                     </HBox>
                     <HBox alignment="CENTER_RIGHT" spacing="20.0" GridPane.columnIndex="2">
                         <Canvas fx:id="player2TarCanvas"/>
-                        <Label fx:id="player2ScoreLabel" text="0"/>
+                        <Label fx:id="player2ScoreLabel"/>
                         <Label fx:id="player2Label" text="Player 2"/>
                     </HBox>
                     <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="0"
