--- a/src/main/resources/trashsoftware/trashSnooker/fxml/newCareerView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/newCareerView.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.layout.*?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="trashsoftware.trashSnooker.fxml.NewCareerView" spacing="5.0">
+      fx:controller="trashsoftware.trashSnooker.fxml.NewCareerView" spacing="10.0"
+      alignment="CENTER" prefWidth="640.0" prefHeight="400.0">
 
     <padding>
         <Insets topRightBottomLeft="10.0"/>
@@ -15,70 +16,85 @@
         <Button text="%backIcon" onAction="#backAction"/>
     </HBox>
 
-    <GridPane fx:id="basePane"
-              prefHeight="400.0" prefWidth="600.0" vgap="10.0" hgap="10.0" alignment="CENTER"
-              VBox.vgrow="ALWAYS">
-
+    <GridPane fx:id="basePane" vgap="10.0" hgap="10.0" alignment="CENTER_LEFT">
         <columnConstraints>
-            <ColumnConstraints halignment="CENTER"/>
             <ColumnConstraints halignment="LEFT"/>
-            <ColumnConstraints halignment="CENTER"/>
-            <ColumnConstraints halignment="CENTER"/>
             <ColumnConstraints halignment="LEFT"/>
+            <ColumnConstraints/>
         </columnConstraints>
 
         <Label text="%difficulty" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
         <ComboBox fx:id="playerGoodnessBox" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
         <Label text="%aiGoodness" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
         <ComboBox fx:id="aiGoodnessBox" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <Label text="%includeCustomPlayer" wrapText="true"
+               GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+        <CheckBox fx:id="includeCustomPlayerBox" selected="true"
+                  GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+    </GridPane>
 
-        <Separator GridPane.rowIndex="2" GridPane.columnSpan="5"/>
+    <Separator GridPane.rowIndex="3" GridPane.columnSpan="3"/>
 
-        <Label text="%createPlayerPerson" GridPane.rowIndex="3" GridPane.columnSpan="2"/>
+    <GridPane hgap="10.0">
+        <columnConstraints>
+            <ColumnConstraints/>
+            <ColumnConstraints halignment="CENTER"/>
+            <ColumnConstraints/>
+        </columnConstraints>
 
-        <Label text="%careerName" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-        <TextField fx:id="nameField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+        <fx:define>
+            <ToggleGroup fx:id="paneToggle"/>
+        </fx:define>
 
-        <Label text="%sexWithHelp" GridPane.rowIndex="5">
-            <tooltip>
-                <Tooltip text="%sexTooltip"/>
-            </tooltip>
-        </Label>
+        <VBox spacing="10.0" GridPane.columnIndex="0">
+            <RadioButton fx:id="createPlayerCheck" toggleGroup="$paneToggle" selected="true"
+                         text="%createPlayerPerson"/>
 
-        <ComboBox fx:id="sexBox" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+            <GridPane fx:id="createPlayerPane"
+                      vgap="10.0" hgap="10.0">
+                <Label text="%careerName" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <TextField fx:id="nameField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
 
-        <Label text="%heightWithHelp" GridPane.rowIndex="6">
-            <tooltip>
-                <Tooltip text="%heightTooltip"/>
-            </tooltip>
-        </Label>
+                <Label text="%sexWithHelp" GridPane.rowIndex="1">
+                    <tooltip>
+                        <Tooltip text="%sexTooltip"/>
+                    </tooltip>
+                </Label>
 
-        <ComboBox fx:id="heightBox" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+                <ComboBox fx:id="sexBox" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
-        <Label text="%primaryHand" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-        <ComboBox fx:id="handBox" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+                <Label text="%heightWithHelp" GridPane.rowIndex="2">
+                    <tooltip>
+                        <Tooltip text="%heightTooltip"/>
+                    </tooltip>
+                </Label>
 
-        <Button text="%createPlayer" onAction="#createPlayer" GridPane.rowIndex="8"
-                GridPane.columnSpan="2"/>
+                <ComboBox fx:id="heightBox" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
-        <Separator orientation="VERTICAL" GridPane.rowIndex="3" GridPane.columnIndex="2"
-                   GridPane.rowSpan="4"/>
+                <Label text="%primaryHand" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+                <ComboBox fx:id="handBox" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+            </GridPane>
+        </VBox>
 
-        <Label text="%existingPlayerPerson" GridPane.rowIndex="3" GridPane.columnIndex="3"
-               GridPane.columnSpan="2"/>
+        <Separator GridPane.columnIndex="1" orientation="VERTICAL"/>
 
-        <Button text="(i)" fx:id="playerInfoBtn" onAction="#playerInfoAction" disable="true"
-                GridPane.rowIndex="4" GridPane.columnIndex="3"/>
-        <ComboBox fx:id="existingPlayersBox" GridPane.rowIndex="4" GridPane.columnIndex="4"/>
+        <VBox spacing="10.0" GridPane.columnIndex="2">
+            <RadioButton fx:id="usePlayerCheck" toggleGroup="$paneToggle"
+                         text="%existingPlayerPerson"/>
+            <GridPane fx:id="usePlayerPane" vgap="10.0" hgap="10.0">
+                <Button text="(i)" fx:id="playerInfoBtn" onAction="#playerInfoAction" disable="true"
+                        GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <ComboBox fx:id="existingPlayersBox" GridPane.rowIndex="0"
+                          GridPane.columnIndex="1"/>
 
-        <Label text="%existingPlayerTooltip"
-               GridPane.rowIndex="5" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+                <Label text="%existingPlayerTooltip"
+                       GridPane.rowIndex="1" GridPane.columnIndex="0" GridPane.columnSpan="2"/>
 
-        <Button text="%usePlayerPerson" fx:id="usePlayerButton" onAction="#usePlayerAction"
-                disable="true"
-                GridPane.rowIndex="6" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
-
-        <Label fx:id="promptLabel" GridPane.rowIndex="9" GridPane.columnSpan="5"/>
+            </GridPane>
+        </VBox>
 
     </GridPane>
+    <Button text="%createPlayer" onAction="#createCareerAction"/>
+
+    <Label fx:id="promptLabel"/>
 </VBox>
