--- a/src/main/resources/trashsoftware/trashSnooker/fxml/fastGameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/fastGameView.fxml
@@ -30,23 +30,25 @@
         <columnConstraints>
             <ColumnConstraints halignment="CENTER"/>
             <ColumnConstraints halignment="CENTER"/>
+            <ColumnConstraints/>
+            <ColumnConstraints/>
+            <ColumnConstraints maxWidth="120.0"/>
         </columnConstraints>
 
         <Button fx:id="player1InfoButton" onAction="#playerInfoAction" text="(i)" disable="true"/>
         <ComboBox fx:id="player1CatBox" GridPane.columnIndex="1"/>
         <ComboBox fx:id="player1Box" GridPane.columnIndex="2"/>
-        <!--        <ComboBox fx:id="player1CueBox" GridPane.columnIndex="3"/>-->
-<!--        <Button fx:id="player1CueBtn" onAction="#changeCueAction" GridPane.columnIndex="3"/>-->
         <ComboBox fx:id="player1Player" GridPane.columnIndex="3"/>
+        <ComboBox fx:id="player1LetScore" GridPane.columnIndex="4"/>
         <Label fx:id="vsText" text="VS" GridPane.rowIndex="1" GridPane.columnSpan="3"/>
+        <Label text="%letScoreOrBall" fx:id="letScoreOrBallLabel" 
+               GridPane.rowIndex="1" GridPane.columnIndex="4"/>
         <Button fx:id="player2InfoButton" text="(i)" onAction="#playerInfoAction"
                 GridPane.rowIndex="2" disable="true"/>
         <ComboBox fx:id="player2CatBox" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         <ComboBox fx:id="player2Box" GridPane.rowIndex="2" GridPane.columnIndex="2"/>
-        <!--        <ComboBox fx:id="player2CueBox" GridPane.rowIndex="2" GridPane.columnIndex="3"/>-->
-<!--        <Button fx:id="player2CueBtn" onAction="#changeCueAction" GridPane.rowIndex="2"-->
-<!--                GridPane.columnIndex="3"/>-->
         <ComboBox fx:id="player2Player" GridPane.rowIndex="2" GridPane.columnIndex="3"/>
+        <ComboBox fx:id="player2LetScore" GridPane.rowIndex="2" GridPane.columnIndex="4"/>
 
         <Label fx:id="trainingItemText" text="%trainingItem" GridPane.rowIndex="2"
                GridPane.columnIndex="1" visible="false"/>
