--- a/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
@@ -114,7 +114,13 @@
             <Canvas fx:id="cuePointCanvas" GridPane.rowIndex="3" width="100.0" height="100.0"/>
 
             <VBox alignment="TOP_CENTER" GridPane.rowIndex="4" spacing="10.0">
-                <Slider fx:id="powerSlider" prefHeight="320.0" orientation="VERTICAL"/>
+                <Pane fx:id="powerSliderPane">
+                    <Slider fx:id="powerSlider" layoutX="30.0" prefHeight="320.0" orientation="VERTICAL"/>
+                    <Label fx:id="sliderZeroLabel" layoutX="42.0" text="0.0" visible="false" textFill="dimgray"/>
+                    <Label fx:id="sliderCtrlLabel" layoutX="42.0" text="10.0" visible="false" textFill="dimgray"/>
+                    <Label fx:id="sliderMaxLabel" layoutX="42.0" text="20.0" visible="false" textFill="dimgray"/>
+                </Pane>
+                
                 <Label fx:id="powerLabel"/>
                 <VBox fx:id="gameButtonBox" alignment="CENTER">
                     <Button fx:id="cueButton" text="%cueText" onAction="#cueAction"/>
