--- a/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
@@ -93,7 +93,7 @@
         <GridPane AnchorPane.topAnchor="25.0" vgap="2.0" hgap="20.0"
                   style="-fx-background: whitesmoke">
             <columnConstraints>
-                <ColumnConstraints halignment="CENTER"/>
+                <ColumnConstraints halignment="CENTER" prefWidth="120.0"/>
                 <ColumnConstraints/>
             </columnConstraints>
 
